# contract-manager

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  openspec.yaml
backend/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  pyproject.toml
backend/apps/audit/: __init__.py  apps.py  middleware.py  models.py  schema.py  services.py  signals.py
backend/apps/banking/: apps.py  models.py  schema.py  services.py  views.py
backend/apps/contracts/: admin.py  models.py  schema.py  views.py
backend/apps/core/: auth.py  context.py  models.py  permissions.py  schema.py  todoist.py
backend/apps/customers/: admin.py  hubspot.py  models.py  schema.py  views.py
backend/apps/invoices/: __init__.py  customer_matching.py  extraction.py  models.py  numbering.py  payment_matching.py  pdf_analysis.py  schema.py  services.py  (+4 more)
backend/config/: __init__.py  asgi.py  celery.py  schema.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_audit.py  test_banking.py  test_contract_import.py  test_contracts.py  test_contracts_graphql.py  test_customer_invoice_language.py  test_dashboard_kpis.py  test_health.py  test_help_video_links.py  test_invoice_generation.py  test_invoice_import.py  test_invoice_numbering.py  test_invoice_pdf.py  test_invoice_pdf_analysis.py  test_invoice_uploads.py  test_invoices.py  test_liquidity_forecast.py  test_pattern_detection.py  test_pdf_analysis.py  test_rbac.py  test_storage.py  test_todoist.py  test_todos.py  test_user_management.py  test_zugferd.py
(+323 files in other folders)
